k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: 779846799257.dkr.ecr.us-east-1.amazonaws.com/react-app-repo:<IMAGE_TAG>
          ports:
            - containerPort: 80
