k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 80
